add ML/DL seeding functions

--- a/jupyter/01_Complete_SeedHash_Tutorial.ipynb
+++ b/jupyter/01_Complete_SeedHash_Tutorial.ipynb
@@ -1,5 +1,595 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "05ee1f20",
+   "metadata": {},
+   "source": [
+    "# SeedHash: Complete Tutorial\n",
+    "\n",
+    "## Reproducible Random Seed Generation for Machine Learning\n",
+    "\n",
+    "Welcome to the comprehensive tutorial for the **seedhash** library! This notebook demonstrates all features and use cases.\n",
+    "\n",
+    "### What is SeedHash?\n",
+    "\n",
+    "SeedHash generates **deterministic random seeds from string inputs** using MD5 hashing, making your experiments reproducible across:\n",
+    "- Python's `random` module\n",
+    "- NumPy\n",
+    "- PyTorch\n",
+    "- TensorFlow\n",
+    "- And more!\n",
+    "\n",
+    "### Key Features\n",
+    "\n",
+    "✅ **String-to-Seed Conversion**: Turn experiment names into seeds  \n",
+    "✅ **Cross-Framework Support**: Seeds Python, NumPy, PyTorch, TensorFlow  \n",
+    "✅ **Hierarchical Sampling**: Generate master → seeds → sub-seeds  \n",
+    "✅ **ML Experiment Tracking**: Track experiments with DataFrame output  \n",
+    "✅ **Advanced Paradigms**: Semi-supervised, RL, Federated Learning support\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fb146f2",
+   "metadata": {},
+   "source": [
+    "## 1. Installation\n",
+    "\n",
+    "First, let's install the seedhash library. You can install it directly from GitHub:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e262bd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install seedhash with all dependencies\n",
+    "# !pip install \"git+https://github.com/melhzy/seedhash.git#subdirectory=Python[all]\"\n",
+    "\n",
+    "# For this tutorial, we'll add the Python directory to the path\n",
+    "import sys\n",
+    "sys.path.insert(0, '../Python')\n",
+    "\n",
+    "# Import seedhash\n",
+    "from seedhash import SeedHashGenerator, SeedExperimentManager, MLMetrics\n",
+    "\n",
+    "# Import other libraries\n",
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
+    "print(\"✅ SeedHash imported successfully!\")\n",
+    "print(f\"📦 Available classes: SeedHashGenerator, SeedExperimentManager, MLMetrics\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17642907",
+   "metadata": {},
+   "source": [
+    "## 2. Basic Usage: Creating a SeedHashGenerator\n",
+    "\n",
+    "The core of seedhash is the `SeedHashGenerator` class. It converts any string into a deterministic integer seed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cf3f263",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a SeedHashGenerator with an experiment name\n",
+    "gen = SeedHashGenerator(\"my_first_experiment\")\n",
+    "\n",
+    "print(f\"Input string: {gen.input_string}\")\n",
+    "print(f\"Generated seed: {gen.seed_number}\")\n",
+    "print(f\"MD5 hash: {gen.get_hash()}\")\n",
+    "print(f\"\\n{gen}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b920f52",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Verify the seed generation\n",
+    "print(f\"Generated seed: {gen.seed_number}\")\n",
+    "print(f\"Seed type: {type(gen.seed_number)}\")\n",
+    "print(f\"Seed range: 0 to {2**31 - 1}\")\n",
+    "\n",
+    "# The same identifier always produces the same seed!\n",
+    "gen_copy = SeedHashGenerator(\"my_experiment\")\n",
+    "print(f\"\\nVerification: {gen.seed_number == gen_copy.seed_number}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59c3dff1",
+   "metadata": {},
+   "source": [
+    "## 3. Reproducibility in Action 🔄\n",
+    "\n",
+    "The **most powerful feature** of SeedHash is guaranteed reproducibility. The same identifier always produces the same seed, regardless of when or where you run it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1720617f",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Demonstrate reproducibility\n",
+    "identifier = \"data_split_v1\"\n",
+    "\n",
+    "# First run\n",
+    "gen1 = SeedHashGenerator(identifier)\n",
+    "random.seed(gen1.seed_number)\n",
+    "sample1 = random.sample(range(100), 10)\n",
+    "\n",
+    "# Second run (completely separate)\n",
+    "gen2 = SeedHashGenerator(identifier)\n",
+    "random.seed(gen2.seed_number)\n",
+    "sample2 = random.sample(range(100), 10)\n",
+    "\n",
+    "# Results are identical!\n",
+    "print(f\"First sample:  {sample1}\")\n",
+    "print(f\"Second sample: {sample2}\")\n",
+    "print(f\"Are they equal? {sample1 == sample2} ✅\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac40c1c8",
+   "metadata": {},
+   "source": [
+    "## 4. Seeding Different Frameworks 🧠\n",
+    "\n",
+    "SeedHash seamlessly integrates with popular Python frameworks. Let's seed each one!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f481e1fc",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "### Python Random Module\n",
+    "gen = SeedHashGenerator(\"python_random_exp\")\n",
+    "gen.seed_python()  # Seeds random module\n",
+    "print(f\"Python seeded with: {gen.seed_number}\")\n",
+    "print(f\"Random number: {random.random()}\")\n",
+    "\n",
+    "### NumPy\n",
+    "gen = SeedHashGenerator(\"numpy_exp\")\n",
+    "gen.seed_numpy()  # Seeds numpy.random\n",
+    "print(f\"\\nNumPy seeded with: {gen.seed_number}\")\n",
+    "print(f\"Random array: {np.random.rand(3)}\")\n",
+    "\n",
+    "### PyTorch (if installed)\n",
+    "try:\n",
+    "    import torch\n",
+    "    gen = SeedHashGenerator(\"pytorch_exp\")\n",
+    "    gen.seed_torch()  # Seeds PyTorch\n",
+    "    print(f\"\\nPyTorch seeded with: {gen.seed_number}\")\n",
+    "    print(f\"Random tensor: {torch.rand(3)}\")\n",
+    "except ImportError:\n",
+    "    print(\"\\n⚠️ PyTorch not installed (optional)\")\n",
+    "\n",
+    "### TensorFlow (if installed)\n",
+    "try:\n",
+    "    import tensorflow as tf\n",
+    "    gen = SeedHashGenerator(\"tensorflow_exp\")\n",
+    "    gen.seed_tensorflow()  # Seeds TensorFlow\n",
+    "    print(f\"\\nTensorFlow seeded with: {gen.seed_number}\")\n",
+    "    print(f\"Random tensor: {tf.random.uniform([3])}\")\n",
+    "except ImportError:\n",
+    "    print(\"⚠️ TensorFlow not installed (optional)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e109f7cb",
+   "metadata": {},
+   "source": [
+    "## 5. Deterministic Mode 🔒\n",
+    "\n",
+    "For **maximum reproducibility**, use `set_deterministic_mode()` to configure all frameworks at once!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6741fd58",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "gen = SeedHashGenerator(\"deterministic_exp\")\n",
+    "\n",
+    "# Seed ALL frameworks at once!\n",
+    "gen.set_deterministic_mode()\n",
+    "\n",
+    "print(\"✅ All frameworks seeded:\")\n",
+    "print(f\"  - Python random: {gen.seed_number}\")\n",
+    "print(f\"  - NumPy: {gen.seed_number}\")\n",
+    "\n",
+    "try:\n",
+    "    import torch\n",
+    "    print(f\"  - PyTorch: {gen.seed_number}\")\n",
+    "    print(f\"  - CUDA deterministic: ON\")\n",
+    "except ImportError:\n",
+    "    pass\n",
+    "\n",
+    "try:\n",
+    "    import tensorflow as tf\n",
+    "    print(f\"  - TensorFlow: {gen.seed_number}\")\n",
+    "except ImportError:\n",
+    "    pass\n",
+    "\n",
+    "# Now all random operations are reproducible!\n",
+    "print(f\"\\nPython random: {random.random()}\")\n",
+    "print(f\"NumPy random: {np.random.rand()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9b2db8e",
+   "metadata": {},
+   "source": [
+    "## 6. Generating Multiple Seeds 🎲\n",
+    "\n",
+    "Need multiple random seeds? Use `generate_random_seeds()`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87ff1be4",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "gen = SeedHashGenerator(\"multi_seed_exp\")\n",
+    "\n",
+    "# Generate 5 random seeds\n",
+    "seeds = gen.generate_random_seeds(n=5)\n",
+    "print(\"Generated seeds:\")\n",
+    "for i, seed in enumerate(seeds, 1):\n",
+    "    print(f\"  Seed {i}: {seed}\")\n",
+    "\n",
+    "# These seeds are still reproducible!\n",
+    "gen2 = SeedHashGenerator(\"multi_seed_exp\")\n",
+    "seeds2 = gen2.generate_random_seeds(n=5)\n",
+    "print(f\"\\nReproducible? {seeds == seeds2} ✅\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e6632a0",
+   "metadata": {},
+   "source": [
+    "## 7. Custom Ranges 🎯\n",
+    "\n",
+    "Generate seeds within specific ranges using `min_seed` and `max_seed`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0508984c",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Small range (0-999)\n",
+    "gen = SeedHashGenerator(\"small_range\", min_seed=0, max_seed=999)\n",
+    "print(f\"Small range seed: {gen.seed_number} (0-999)\")\n",
+    "\n",
+    "# Custom range (1000-9999)\n",
+    "gen = SeedHashGenerator(\"custom_range\", min_seed=1000, max_seed=9999)\n",
+    "print(f\"Custom range seed: {gen.seed_number} (1000-9999)\")\n",
+    "\n",
+    "# Large range (default)\n",
+    "gen = SeedHashGenerator(\"large_range\")\n",
+    "print(f\"Default range seed: {gen.seed_number} (0-{2**31-1})\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "277a66be",
+   "metadata": {},
+   "source": [
+    "## 8. Practical Example: Data Splitting 📊\n",
+    "\n",
+    "Let's use SeedHash for a real-world task: splitting data reproducibly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "782eaec0",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Create synthetic data\n",
+    "X = np.random.randn(100, 5)\n",
+    "y = np.random.randint(0, 2, 100)\n",
+    "\n",
+    "# Split data reproducibly\n",
+    "gen = SeedHashGenerator(\"data_split_v1\")\n",
+    "gen.seed_numpy()\n",
+    "\n",
+    "# Shuffle indices\n",
+    "indices = np.arange(len(X))\n",
+    "np.random.shuffle(indices)\n",
+    "\n",
+    "# Split 80/20\n",
+    "split_point = int(0.8 * len(indices))\n",
+    "train_idx = indices[:split_point]\n",
+    "test_idx = indices[split_point:]\n",
+    "\n",
+    "print(f\"Training samples: {len(train_idx)}\")\n",
+    "print(f\"Test samples: {len(test_idx)}\")\n",
+    "print(f\"\\nFirst 5 train indices: {sorted(train_idx)[:5]}\")\n",
+    "print(f\"First 5 test indices: {sorted(test_idx)[:5]}\")\n",
+    "\n",
+    "# Run again - same split!\n",
+    "gen2 = SeedHashGenerator(\"data_split_v1\")\n",
+    "gen2.seed_numpy()\n",
+    "indices2 = np.arange(len(X))\n",
+    "np.random.shuffle(indices2)\n",
+    "train_idx2 = indices2[:split_point]\n",
+    "\n",
+    "print(f\"\\nSame split? {np.array_equal(train_idx, train_idx2)} ✅\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e61ab244",
+   "metadata": {},
+   "source": [
+    "## 9. Practical Example: Model Training 🤖\n",
+    "\n",
+    "Train a simple model with reproducible initialization:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4deb169c",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Simulate training with NumPy\n",
+    "def train_model(seed_id):\n",
+    "    \"\"\"Simple model training simulation\"\"\"\n",
+    "    gen = SeedHashGenerator(seed_id)\n",
+    "    gen.seed_numpy()\n",
+    "    \n",
+    "    # Initialize random weights\n",
+    "    weights = np.random.randn(10)\n",
+    "    bias = np.random.randn()\n",
+    "    \n",
+    "    # Simulate training\n",
+    "    for epoch in range(5):\n",
+    "        loss = np.random.rand()  # Simulated loss\n",
+    "    \n",
+    "    return weights, bias, loss\n",
+    "\n",
+    "# Train model 1\n",
+    "weights1, bias1, loss1 = train_model(\"model_v1\")\n",
+    "print(f\"Model 1 - Loss: {loss1:.4f}\")\n",
+    "print(f\"First 3 weights: {weights1[:3]}\")\n",
+    "\n",
+    "# Train model 2 (same seed)\n",
+    "weights2, bias2, loss2 = train_model(\"model_v1\")\n",
+    "print(f\"\\nModel 2 - Loss: {loss2:.4f}\")\n",
+    "print(f\"First 3 weights: {weights2[:3]}\")\n",
+    "\n",
+    "# Verify reproducibility\n",
+    "print(f\"\\nSame weights? {np.allclose(weights1, weights2)} ✅\")\n",
+    "print(f\"Same loss? {loss1 == loss2} ✅\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6420552",
+   "metadata": {},
+   "source": [
+    "## 10. Understanding MD5 Hashing 🔐\n",
+    "\n",
+    "SeedHash uses MD5 hashing to convert identifiers to seeds. Let's see how!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8927820",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "gen = SeedHashGenerator(\"my_experiment\")\n",
+    "\n",
+    "# The full MD5 hash (hexadecimal)\n",
+    "print(f\"MD5 hash: {gen.md5_hash}\")\n",
+    "print(f\"Hash length: {len(gen.md5_hash)} characters\")\n",
+    "\n",
+    "# Converted to integer seed\n",
+    "print(f\"\\nInteger seed: {gen.seed_number}\")\n",
+    "print(f\"Seed range: [0, {2**31 - 1}]\")\n",
+    "\n",
+    "# Different identifiers → Different seeds\n",
+    "identifiers = [\"exp_1\", \"exp_2\", \"exp_3\"]\n",
+    "for identifier in identifiers:\n",
+    "    gen = SeedHashGenerator(identifier)\n",
+    "    print(f\"\\n'{identifier}':\")\n",
+    "    print(f\"  MD5: {gen.md5_hash[:16]}...\")\n",
+    "    print(f\"  Seed: {gen.seed_number}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8c93e78",
+   "metadata": {},
+   "source": [
+    "## 11. Error Handling ⚠️\n",
+    "\n",
+    "SeedHash validates inputs and provides helpful error messages:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c90271be",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Test invalid range\n",
+    "try:\n",
+    "    gen = SeedHashGenerator(\"test\", min_seed=100, max_seed=10)\n",
+    "except ValueError as e:\n",
+    "    print(f\"❌ Error: {e}\")\n",
+    "\n",
+    "# Test invalid type\n",
+    "try:\n",
+    "    gen = SeedHashGenerator(12345)  # Must be string\n",
+    "except TypeError as e:\n",
+    "    print(f\"❌ Error: {e}\")\n",
+    "\n",
+    "# Test invalid n for multiple seeds\n",
+    "try:\n",
+    "    gen = SeedHashGenerator(\"test\")\n",
+    "    gen.generate_random_seeds(n=-5)\n",
+    "except ValueError as e:\n",
+    "    print(f\"❌ Error: {e}\")\n",
+    "\n",
+    "print(\"\\n✅ All error handling works correctly!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15879761",
+   "metadata": {},
+   "source": [
+    "## 12. Best Practices 💡\n",
+    "\n",
+    "### ✅ DO:\n",
+    "- Use descriptive identifiers: `\"data_split_v1\"`, `\"model_training_2024\"`\n",
+    "- Version your experiments: `\"exp_v1\"`, `\"exp_v2\"`, etc.\n",
+    "- Call `set_deterministic_mode()` at the start of your script\n",
+    "- Document your seed identifiers in code comments\n",
+    "\n",
+    "### ❌ DON'T:\n",
+    "- Use random or timestamp-based identifiers\n",
+    "- Change identifiers mid-experiment\n",
+    "- Mix manual seeding with SeedHash seeding\n",
+    "- Forget to seed frameworks before random operations\n",
+    "\n",
+    "### Example: Good Practice\n",
+    "```python\n",
+    "# At the start of your script\n",
+    "from seedhash import SeedHashGenerator\n",
+    "\n",
+    "# Version your experiment\n",
+    "EXPERIMENT_VERSION = \"v1.0\"\n",
+    "gen = SeedHashGenerator(f\"my_project_{EXPERIMENT_VERSION}\")\n",
+    "gen.set_deterministic_mode()\n",
+    "\n",
+    "# Now all random operations are reproducible!\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "427dec40",
+   "metadata": {},
+   "source": [
+    "## 13. Next Steps 🚀\n",
+    "\n",
+    "Congratulations! You now know the basics of SeedHash. Ready for more?\n",
+    "\n",
+    "### 📚 Continue Learning:\n",
+    "\n",
+    "1. **Hierarchical Sampling** (`02_Hierarchical_Sampling.ipynb`)\n",
+    "   - Learn about `SeedExperimentManager`\n",
+    "   - Master hierarchical seed generation\n",
+    "   - Track ML experiments systematically\n",
+    "\n",
+    "2. **Advanced ML Paradigms** (`03_Advanced_ML_Paradigms.ipynb`)\n",
+    "   - Semi-supervised learning metrics\n",
+    "   - Reinforcement learning tracking\n",
+    "   - Federated learning evaluation\n",
+    "\n",
+    "### 📖 Additional Resources:\n",
+    "\n",
+    "- **GitHub**: https://github.com/melhzy/seedhash\n",
+    "- **Python Examples**: `../Python/examples/`\n",
+    "- **Full Documentation**: `../Python/README.md`\n",
+    "- **R Package**: `../R/` (if you use R)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🎉 Summary\n",
+    "\n",
+    "You learned how to:\n",
+    "- ✅ Generate reproducible seeds with `SeedHashGenerator`\n",
+    "- ✅ Seed Python, NumPy, PyTorch, TensorFlow\n",
+    "- ✅ Use `set_deterministic_mode()` for maximum reproducibility\n",
+    "- ✅ Generate multiple seeds with `generate_random_seeds()`\n",
+    "- ✅ Apply SeedHash to data splitting and model training\n",
+    "- ✅ Understand MD5 hashing and error handling\n",
+    "- ✅ Follow best practices for experiment reproducibility\n",
+    "\n",
+    "**Happy experimenting! 🔬**"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
