--- a/jupyter/02_Hierarchical_Sampling.ipynb
+++ b/jupyter/02_Hierarchical_Sampling.ipynb
@@ -1,5 +1,494 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "b9d03138",
+   "metadata": {},
+   "source": [
+    "# 📊 Hierarchical Sampling & Experiment Management\n",
+    "\n",
+    "## Advanced SeedHash Tutorial #2\n",
+    "\n",
+    "**Welcome!** This notebook covers advanced features of SeedHash:\n",
+    "- `SeedExperimentManager` for systematic experimentation\n",
+    "- Hierarchical seed generation (master → seeds → sub-seeds)\n",
+    "- 4 sampling methods: simple, stratified, cluster, systematic\n",
+    "- ML experiment tracking with metrics\n",
+    "- DataFrame export and analysis\n",
+    "\n",
+    "**Prerequisites**: Complete `01_Complete_SeedHash_Tutorial.ipynb` first\n",
+    "\n",
+    "**Duration**: ~45 minutes\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Table of Contents\n",
+    "1. Introduction to SeedExperimentManager\n",
+    "2. Hierarchical Seed Generation\n",
+    "3. Simple Random Sampling\n",
+    "4. Stratified Random Sampling\n",
+    "5. Cluster Random Sampling\n",
+    "6. Systematic Random Sampling\n",
+    "7. ML Experiment Tracking\n",
+    "8. DataFrame Export & Analysis\n",
+    "9. Complete Example: Multi-Experiment Study\n",
+    "10. Best Practices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "169febfa",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Install seedhash if needed\n",
+    "import sys\n",
+    "sys.path.insert(0, '../Python')\n",
+    "\n",
+    "# Import required libraries\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from seedhash import SeedExperimentManager\n",
+    "\n",
+    "print(\"✅ All imports successful!\")\n",
+    "print(f\"NumPy version: {np.__version__}\")\n",
+    "print(f\"Pandas version: {pd.__version__}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5525907b",
+   "metadata": {},
+   "source": [
+    "## 1. Introduction to SeedExperimentManager 🎯\n",
+    "\n",
+    "The `SeedExperimentManager` is a powerful tool for:\n",
+    "- Managing multiple experiments with hierarchical seeds\n",
+    "- Tracking ML metrics across different methods\n",
+    "- Organizing results in pandas DataFrames\n",
+    "- Comparing sampling strategies\n",
+    "\n",
+    "Let's create our first manager:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc7d0455",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Create an experiment manager\n",
+    "manager = SeedExperimentManager(\"my_ml_project\")\n",
+    "\n",
+    "print(f\"Project: {manager.project_name}\")\n",
+    "print(f\"Master seed: {manager.master_seed}\")\n",
+    "print(f\"Experiments tracked: {len(manager.results)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d939dc2",
+   "metadata": {},
+   "source": [
+    "## 2. Hierarchical Seed Generation 🌳\n",
+    "\n",
+    "Generate a **hierarchy** of seeds: master → seeds → sub-seeds → sub-sub-seeds\n",
+    "\n",
+    "This is perfect for:\n",
+    "- Cross-validation folds\n",
+    "- Ensemble methods\n",
+    "- Nested experiments\n",
+    "- Multi-level sampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "502d3a13",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Generate hierarchical seeds\n",
+    "hierarchy = manager.generate_seed_hierarchy(\n",
+    "    n_seeds=3,        # 3 main seeds\n",
+    "    n_sub_seeds=2,    # 2 sub-seeds per main seed\n",
+    "    max_depth=2       # 2 levels deep\n",
+    ")\n",
+    "\n",
+    "print(f\"Master seed: {hierarchy[0][0]}\\n\")\n",
+    "print(f\"Level 0 (master): {hierarchy[0]}\")\n",
+    "print(f\"Level 1 (seeds): {hierarchy[1]}\")\n",
+    "print(f\"Level 2 (sub-seeds): {hierarchy[2]}\\n\")\n",
+    "\n",
+    "print(\"Hierarchy structure:\")\n",
+    "for level, seeds in hierarchy.items():\n",
+    "    print(f\"  Level {level}: {len(seeds)} seed(s)\")\n",
+    "    if len(seeds) <= 10:  # Only print if not too many\n",
+    "        print(f\"    {seeds[:5]}{'...' if len(seeds) > 5 else ''}\")\n",
+    "\n",
+    "print(f\"\\nTotal: {hierarchy[0]} → {len(hierarchy[1])} seeds → {len(hierarchy[2])} sub-seeds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6c5fd00",
+   "metadata": {},
+   "source": [
+    "## 3. Simple Random Sampling 🎲\n",
+    "\n",
+    "The most basic sampling method: randomly select samples without stratification.\n",
+    "\n",
+    "**Use case**: Quick experiments, baseline comparisons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbd12e22",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Simple random sampling\n",
+    "population_size = 1000\n",
+    "sample_size = 100\n",
+    "\n",
+    "samples = manager.simple_random_sample(\n",
+    "    population_size=population_size,\n",
+    "    sample_size=sample_size,\n",
+    "    seed=12345\n",
+    ")\n",
+    "\n",
+    "print(f\"Population: {population_size}\")\n",
+    "print(f\"Sample size: {len(samples)}\")\n",
+    "print(f\"First 10 samples: {sorted(samples)[:10]}\")\n",
+    "print(f\"Sample range: [{min(samples)}, {max(samples)}]\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c32e0f32",
+   "metadata": {},
+   "source": [
+    "## 4. Stratified Random Sampling 📊\n",
+    "\n",
+    "Ensures proportional representation across different strata (groups) in your data.\n",
+    "\n",
+    "**Use case**: Balanced experiments, class-imbalanced datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03f9f59d",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Stratified sampling ensures balanced coverage\n",
+    "samples = manager.stratified_random_sample(\n",
+    "    population_size=1000,\n",
+    "    sample_size=100,\n",
+    "    n_strata=10,  # Divide into 10 strata\n",
+    "    seed=12345\n",
+    ")\n",
+    "\n",
+    "print(f\"Stratified sample size: {len(samples)}\")\n",
+    "print(f\"First 10 samples: {sorted(samples)[:10]}\")\n",
+    "\n",
+    "# Verify stratification\n",
+    "import numpy as np\n",
+    "strata_sizes = [len([s for s in samples if i*100 <= s < (i+1)*100]) for i in range(10)]\n",
+    "print(f\"\\nSamples per stratum: {strata_sizes}\")\n",
+    "print(f\"Expected per stratum: ~{100//10}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fe30ce6",
+   "metadata": {},
+   "source": [
+    "## 5. Cluster Random Sampling 🎯\n",
+    "\n",
+    "Groups related samples together before selection.\n",
+    "\n",
+    "**Use case**: Geographic data, grouped experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93f2a691",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Cluster sampling groups related samples\n",
+    "samples = manager.cluster_random_sample(\n",
+    "    population_size=1000,\n",
+    "    sample_size=100,\n",
+    "    n_clusters=5,  # Create 5 clusters\n",
+    "    seed=12345\n",
+    ")\n",
+    "\n",
+    "print(f\"Cluster sample size: {len(samples)}\")\n",
+    "print(f\"First 10 samples: {sorted(samples)[:10]}\")\n",
+    "print(f\"\\nClusters provide natural grouping for batch experiments\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ed5cfab",
+   "metadata": {},
+   "source": [
+    "## 6. Systematic Random Sampling ⚡\n",
+    "\n",
+    "Selects samples at regular intervals.\n",
+    "\n",
+    "**Use case**: Time-series data, evenly distributed experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6d64cec",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Systematic sampling with regular intervals\n",
+    "samples = manager.systematic_random_sample(\n",
+    "    population_size=1000,\n",
+    "    sample_size=100,\n",
+    "    seed=12345\n",
+    ")\n",
+    "\n",
+    "print(f\"Systematic sample size: {len(samples)}\")\n",
+    "print(f\"First 10 samples: {sorted(samples)[:10]}\")\n",
+    "\n",
+    "# Check interval\n",
+    "if len(samples) > 1:\n",
+    "    intervals = [samples[i+1] - samples[i] for i in range(min(5, len(samples)-1))]\n",
+    "    print(f\"\\nFirst 5 intervals: {intervals}\")\n",
+    "    print(f\"Samples are evenly spaced!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e557d87c",
+   "metadata": {},
+   "source": [
+    "## 7. ML Experiment Tracking 📈\n",
+    "\n",
+    "Track experiments with metrics and export to DataFrame for analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1002a4e1",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Create new manager for tracking\n",
+    "tracker = SeedExperimentManager(\"ml_tracking_demo\")\n",
+    "\n",
+    "# Generate seeds for experiments\n",
+    "hierarchy = tracker.generate_seed_hierarchy(n_seeds=5, n_sub_seeds=2, max_depth=2)\n",
+    "\n",
+    "# Simulate regression experiments\n",
+    "for seed in hierarchy[1][:3]:  # Use first 3 seeds\n",
+    "    # Simulate metrics\n",
+    "    rmse = 5.0 + np.random.rand()\n",
+    "    r2 = 0.95 + np.random.rand() * 0.04\n",
+    "    \n",
+    "    # Track result\n",
+    "    tracker.add_experiment_result(\n",
+    "        seed=seed,\n",
+    "        ml_task=\"regression\",\n",
+    "        metrics={\"rmse\": rmse, \"r2\": r2, \"mae\": rmse * 0.8},\n",
+    "        sampling_method=\"simple\",\n",
+    "        metadata={\"model\": \"linear_regression\", \"n_samples\": 100}\n",
+    "    )\n",
+    "    print(f\"Tracked seed {seed}: RMSE={rmse:.3f}, R²={r2:.3f}\")\n",
+    "\n",
+    "print(f\"\\n✓ Tracked {len(tracker.results)} experiments\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cf6cd57",
+   "metadata": {},
+   "source": [
+    "## 8. DataFrame Export & Analysis 📊\n",
+    "\n",
+    "Export all tracked experiments to pandas DataFrame for powerful analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1aefa73f",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Export to DataFrame\n",
+    "df = tracker.get_results_dataframe()\n",
+    "\n",
+    "print(\"DataFrame Preview:\")\n",
+    "print(df.head())\n",
+    "\n",
+    "print(f\"\\nDataFrame shape: {df.shape}\")\n",
+    "print(f\"Columns: {list(df.columns)}\")\n",
+    "\n",
+    "# Analyze metrics\n",
+    "print(\"\\nMetric Statistics:\")\n",
+    "print(df[['metric_rmse', 'metric_r2', 'metric_mae']].describe())\n",
+    "\n",
+    "# Export to files\n",
+    "df.to_csv('experiment_results.csv', index=False)\n",
+    "df.to_json('experiment_results.json', orient='records', indent=2)\n",
+    "\n",
+    "print(\"\\n✓ Exported to CSV and JSON!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ecb4787",
+   "metadata": {},
+   "source": [
+    "## 9. Complete Example: Multi-Experiment Study 🔬\n",
+    "\n",
+    "Putting it all together: run multiple experiments with different sampling methods."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b219cf1",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Complete study comparing all sampling methods\n",
+    "study = SeedExperimentManager(\"complete_study\")\n",
+    "\n",
+    "sampling_methods = [\"simple\", \"stratified\", \"cluster\", \"systematic\"]\n",
+    "\n",
+    "for method in sampling_methods:\n",
+    "    # Generate hierarchy with this method\n",
+    "    hierarchy = study.generate_seed_hierarchy(\n",
+    "        n_seeds=3,\n",
+    "        n_sub_seeds=2,\n",
+    "        max_depth=2,\n",
+    "        sampling_method=method\n",
+    "    )\n",
+    "    \n",
+    "    # Run experiments with level 1 seeds\n",
+    "    for seed in hierarchy[1]:\n",
+    "        # Simulate classification metrics\n",
+    "        accuracy = 0.80 + np.random.rand() * 0.15\n",
+    "        f1_score = accuracy * (0.95 + np.random.rand() * 0.05)\n",
+    "        \n",
+    "        study.add_experiment_result(\n",
+    "            seed=seed,\n",
+    "            ml_task=\"classification\",\n",
+    "            metrics={\"accuracy\": accuracy, \"f1\": f1_score},\n",
+    "            sampling_method=method,\n",
+    "            metadata={\"classifier\": \"random_forest\", \"cv_folds\": 5}\n",
+    "        )\n",
+    "    \n",
+    "    print(f\"✓ Completed {method} sampling: {len(hierarchy[1])} experiments\")\n",
+    "\n",
+    "# Analyze all results\n",
+    "df = study.get_results_dataframe()\n",
+    "print(f\"\\nTotal experiments: {len(df)}\")\n",
+    "print(\"\\nAccuracy by sampling method:\")\n",
+    "print(df.groupby('sampling_method')['metric_accuracy'].agg(['mean', 'std', 'min', 'max']).round(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46a8711f",
+   "metadata": {},
+   "source": [
+    "## 10. Best Practices & Summary 💡\n",
+    "\n",
+    "### ✅ Best Practices:\n",
+    "\n",
+    "**When to use each sampling method:**\n",
+    "- **Simple**: Quick experiments, no special requirements\n",
+    "- **Stratified**: Balanced experiments, class imbalance\n",
+    "- **Cluster**: Grouped data, batch processing\n",
+    "- **Systematic**: Time-series, even distribution\n",
+    "\n",
+    "**Hierarchy depth guidelines:**\n",
+    "- **1 level**: Single experiment with multiple runs\n",
+    "- **2 levels**: Cross-validation folds\n",
+    "- **3+ levels**: Nested experiments, ensemble methods\n",
+    "\n",
+    "**Experiment tracking tips:**\n",
+    "- Always include metadata for reproducibility\n",
+    "- Export to DataFrame for analysis\n",
+    "- Track timestamp and sampling method\n",
+    "- Use descriptive experiment IDs\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🎉 Summary\n",
+    "\n",
+    "You learned:\n",
+    "- ✅ `SeedExperimentManager` for systematic experimentation\n",
+    "- ✅ Hierarchical seed generation (master → seeds → sub-seeds)\n",
+    "- ✅ 4 sampling methods with different use cases\n",
+    "- ✅ ML experiment tracking with metrics\n",
+    "- ✅ DataFrame export for analysis\n",
+    "\n",
+    "**Next:** Try `03_Advanced_ML_Paradigms.ipynb` for semi-supervised, reinforcement, and federated learning!\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Happy experimenting! 📊**"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
